--- a/Assets/akanevrc/TeuchiUdon/Editor/VRC/akanevrc.TeuchiUdon.Editor.VRC.asmdef
+++ b/Assets/akanevrc/TeuchiUdon/Editor/VRC/akanevrc.TeuchiUdon.Editor.VRC.asmdef
@@ -2,7 +2,9 @@
     "name": "akanevrc.TeuchiUdon.Editor.VRC",
     "references": [
         "GUID:3c1bc1267eab5884ebe7f232c09ee0d9",
-        "GUID:627c4d5cd580ddf41bd320e784fe8b9d"
+        "GUID:627c4d5cd580ddf41bd320e784fe8b9d",
+        "GUID:59481dbe69d36154192f3831290bdc48",
+        "GUID:1811478a2b098b2418e9978a0d99235c"
     ],
     "includePlatforms": [
         "Editor"
