--- a/Assets/akanevrc/TeuchiUdon/Editor/Compiler/akanevrc.TeuchiUdon.Editor.Compiler.asmdef
+++ b/Assets/akanevrc/TeuchiUdon/Editor/Compiler/akanevrc.TeuchiUdon.Editor.Compiler.asmdef
@@ -1,6 +1,9 @@
 {
     "name": "akanevrc.TeuchiUdon.Editor.Compiler",
-    "references": [],
+    "references": [
+        "GUID:3c1bc1267eab5884ebe7f232c09ee0d9",
+        "GUID:627c4d5cd580ddf41bd320e784fe8b9d"
+    ],
     "includePlatforms": [
         "Editor"
     ],
