--- a/Assets/akanevrc/TeuchiUdon/Editor/akanevrc.TeuchiUdon.Editor.asmdef
+++ b/Assets/akanevrc/TeuchiUdon/Editor/akanevrc.TeuchiUdon.Editor.asmdef
@@ -1,6 +1,8 @@
 {
     "name": "akanevrc.TeuchiUdon.Editor",
     "references": [
+        "GUID:3c1bc1267eab5884ebe7f232c09ee0d9",
+        "GUID:627c4d5cd580ddf41bd320e784fe8b9d",
         "GUID:59481dbe69d36154192f3831290bdc48"
     ],
     "includePlatforms": [
