--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,4 @@ crashlytics-build.properties
 
 !/[Aa]ssets/akanevrc/
 /[Aa]ssets/akanevrc/**/.antlr/
+/[Aa]ssets/akanevrc/TeuchiUdon/Tests/Editor/tmp/
