--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,13 +1,14 @@
 {
   "dependencies": {
     "com.unity.addressables": "1.15.1",
-    "com.unity.cinemachine": "2.6.11",
+    "com.unity.cinemachine": "2.8.0",
     "com.unity.collab-proxy": "1.10.2",
     "com.unity.ide.rider": "1.2.1",
     "com.unity.ide.visualstudio": "2.0.14",
     "com.unity.ide.vscode": "1.2.5",
+    "com.unity.package-manager-ui": "2.2.0",
     "com.unity.postprocessing": "3.1.1",
-    "com.unity.test-framework": "1.1.31",
+    "com.unity.test-framework": "1.1.27",
     "com.unity.textmeshpro": "2.1.6",
     "com.unity.timeline": "1.2.18",
     "com.unity.ugui": "1.0.0",
