Add support for DI #75

--- a/Compiler/Compiler.csproj
+++ b/Compiler/Compiler.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.1;netstandard2.0;net471</TargetFrameworks>
+    <TargetFrameworks>netstandard2.1;net471</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
@@ -12,8 +12,8 @@
     <ProjectReference Include="..\Parser\Parser.csproj" />
   </ItemGroup>
 
-  <Target Name="CopyTarget" AfterTargets="Build" Condition="'$(TargetFramework)' == 'netstandard2.0' Or '$(TargetFramework)' == 'net471'">
-    <Copy SourceFiles="$(TargetPath)" DestinationFolder="$(ProjectDir)..\Unity\Assets\akanevrc\TeuchiUdon\Editor\Compiler\External\akanevrc.TeuchiUdon.Compiler\lib\$(TargetFramework)\" />
+  <Target Name="CopyTarget" AfterTargets="Build" Condition="'$(TargetFramework)' == 'net471'">
+    <Copy SourceFiles="$(TargetPath)" DestinationFolder="$(ProjectDir)..\Unity\Assets\akanevrc\TeuchiUdon\Editor\Compiler\External\" />
   </Target>
 
 </Project>
