--- a/VSCode/configs/language-configuration.json
+++ b/VSCode/configs/language-configuration.json
@@ -56,6 +56,14 @@
         "string",
         "comment"
       ]
+    },
+    {
+      "open": "$\"",
+      "close": "\"",
+      "notIn": [
+        "string",
+        "comment"
+      ]
     }
   ],
   "surroundingPairs": [
