--- a/teuchiudon-parser/Cargo.toml
+++ b/teuchiudon-parser/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+function_name = "0.3.0"
 nom = { version = "7.1.1", features = ["alloc"] }
 
 [dev-dependencies]
