--- a/teuchiudon-parser/Cargo.toml
+++ b/teuchiudon-parser/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 function_name = "0.3.0"
+itertools = "0.10.5"
 nom = { version = "7.1.1", features = ["alloc"] }
 
 [dev-dependencies]
