--- a/teuchiudon-parser/Cargo.toml
+++ b/teuchiudon-parser/Cargo.toml
@@ -8,3 +8,5 @@ function_name = "0.3.0"
 itertools = "0.10.5"
 nom = "7.1.1"
 nom-supreme = "0.8.0"
+serde = { version = "1.0.147", features = ["derive"] }
+serde_json = "1.0.87"
