--- a/teuchiudon-compiler/Cargo.toml
+++ b/teuchiudon-compiler/Cargo.toml
@@ -5,4 +5,6 @@ edition = "2021"
 
 [dependencies]
 itertools = "0.10.5"
+serde = { version = "1.0.147", features = ["derive"] }
+serde_json = "1.0.88"
 teuchiudon-parser = { version = "0.1.0", path = "../teuchiudon-parser" }
