test: cargo runでコンパイル結果を表示する機能を追加

--- a/teuchiudon-test/Cargo.toml
+++ b/teuchiudon-test/Cargo.toml
@@ -3,7 +3,7 @@ name = "teuchiudon-test"
 version = "0.1.0"
 edition = "2021"
 
-[dev-dependencies]
+[dependencies]
 regex = "1.7.0"
 rstest = "0.15.0"
 serde = { version = "1.0.147", features = ["derive"] }
